--- a/test/android/AndroidManifest.xml
+++ b/test/android/AndroidManifest.xml
@@ -101,7 +101,12 @@ android:hardwareAccelerated = "true"
         </activity>
 
 
-        <!--      android:theme         = "@android:style/Theme.NoTitleBar.Fullscreen"  this start the drowser in a new window-->
+        <!--
+        android:theme         = "@android:style/Theme.Translucent.NoTitleBar"
+        android:theme         = "@android:style/Theme.Material"
+        android:theme         = "@android:style/Theme.NoTitleBar.Fullscreen"  this start the drowser in a new window
+        -->
+
         <!--      android:theme         = "@android:style/Theme.Translucent.NoTitleBar" -->
         <!--      android:theme         = "@android:style/Theme.Holo.NoActionBar.TranslucentDecor" -->
         <!--      android:name          = ".BootUpReceiver"  -->
