switch compiler, clang to gcc

--- a/test/Makefile
+++ b/test/Makefile
@@ -26,14 +26,14 @@ all: s52gtk3egl     # GTK3 & EGL
 
 # GCC
 #CC   = gcc -O0 -g -Wall -Wextra -pedantic -std=gnu99
-#CC   = gcc -O0 -g -Wall -Wextra -pedantic -std=c99 -D_POSIX_C_SOURCE=199309L
+CC   = gcc -O0 -g -Wall -Wextra -pedantic -std=c99 -D_POSIX_C_SOURCE=199309L
 # test - compile C code as C++
 #CC   = g++ -fPIC -O0 -g -Wall
-#CXX   = g++ -O0 -g -Wall
+CXX   = g++ -O0 -g -Wall
 
 # CLANG
-CC   = clang   -fPIC -O0 -g -Wall -Wextra -pedantic -D_POSIX_C_SOURCE=199309L
-CXX  = clang++ -fPIC -O0 -g -Wall -Wextra -pedantic
+#CC   = clang   -fPIC -O0 -g -Wall -Wextra -pedantic -D_POSIX_C_SOURCE=199309L
+#CXX  = clang++ -fPIC -O0 -g -Wall -Wextra -pedantic
 
 MINGW = /usr/bin/i586-mingw32msvc-
 #MINGW = /usr/bin/i686-w64-mingw32-
